--- a/style/aboutus.css
+++ b/style/aboutus.css
@@ -24,7 +24,6 @@
 html, body {
     position: relative;
     overflow-x: hidden;
-    font-family: var(--font-universal);
 }
 
 /* Navigation Section */
@@ -38,144 +37,14 @@ html, body {
 
 }
 
-.nav-colored {
-    background-color: var(--clr-primary);
-    filter: drop-shadow(6px 1px 10px rgba(0, 0, 0, 0.6));
-}
-
-.nav-transparent {
-    background-color:transparent;
-}
-
-#nav-bar-top {
-    padding: 1rem 18rem 1rem 18rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.side-nav-left {
-    font-size: 15px;
-
-    & a {
-        color: white;
-        text-decoration: none;
-        padding-right: 3rem;
-        position: relative;
-    }
-
-    & a:after {
-        content: '';
-        background: white;
-        width: 0;
-        height: 2px;
-        display: block;
-        position: absolute;
-        left: 0;
-        transition: 300ms;
-
-    }
-
-    & a:hover::after {
-        width: 50%;
-    }
-}
-
-.side-nav-right {
-    font-size: 16px;
-
-    & span {
-        margin-right: 16px;
-    }
-
-    & a {
-        color: white;
-        text-decoration: none;
-        padding-left: 3rem;
-    }
-}
-
-/* Navigation bottom */
-#nav-bar-btm {
-    background: transparent;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-inline: 18rem;
-    padding-block: 1rem 0;
-    width: 100vw;
-    z-index: 9999 !important;
-    position: relative;
-
-    & h1 {
-        color: white;
-        font-size: 32px;
-
-        & span {
-            font-size: 15px;
-            font-style: italic;
-            padding-left: 4rem;
-            position: relative;
-            bottom: 1.5rem;
-        }
-    }
-
-    & ul {
-        list-style: none;
-    }
-
-    & li {
-        padding-inline: 20px;
-        display: inline-block;
-        
-    }
-
-    & a {
-        text-decoration: none;
-        color: white;
-        transition: 250ms;
-
-        &:hover::after {
-            width: 100%;
-        }
-    }
-
-    & a::after {
-        content: '';
-        background: white;
-        position: relative;
-        display: block;
-        width: 0;
-        height: 2px;
-        transition: 250ms;
-    }
-
-}
-
-#nav-bar-btm::before {
-    content: '';
-    height: .5px;
-    background: white;
-    position: absolute;
-    display: block;
-    inset: 0 18rem 0 18rem;
-    opacity: .5 
-}
-
-#nav-bar-btm .main-logo {
-    cursor: pointer;
-}
-
 /* About Section */
+
 .abt-container {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), transparent, rgba(0, 0, 0, 0.9)), url("../imgs/about-bg.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 100vw;
+    max-width: 100%;
     height: 100vh;
     padding: 0 18rem 6rem;
     color: white;
@@ -199,7 +68,7 @@ html, body {
 
 .h-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
     gap: 2rem;
 }
 
@@ -223,7 +92,7 @@ html, body {
 .vmg-container {
     max-width: 100vw;
     padding-inline: 18rem;
-    height: 50vh;
+    min-height: 50vh;
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../imgs/vmg-bg.png");
     color: white;
 }
@@ -277,92 +146,126 @@ html, body {
     color: white;
 }
 
-/* Footer Section */
-.footer-container {
-    max-width: 100vw;
-    min-height: 539px;
-    background: var(--clr-primary);
-    padding-inline: 18rem;
-    padding-block: 60px 0;
-    color: white;
- }
+/* Desktop Layout */
 
- .footer-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 4fr));
-    gap: 2rem;
- }
-
- .footer-1 div .f-header {
-    font-size: 18px;
-    opacity: 1 !important;
- }
-
- .footer-1 div .p-footer {
-    opacity: .8;
- }
-
- .footer-1 { 
-
-    & h1 {
-    padding-block: 0 20px;
-    font-size: 24px;
-    }
-
-    & p {
-    padding-block: 0 48px;
- }
- }
-
- .footer-item {
-
-    & h1 {
-    font-size: 24px;
-    padding-block: 0 20px;
+@media screen and (max-width: 1024px) and (max-width: 1650px) {
     
+}
+
+/* Tablet Layout */
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    /* Hero Tablet Layout */
+
+    .abt-container {
+        padding-inline: 1rem;
+        padding-block: 0 4rem;
     }
 
-    & p {
-        opacity: .8;
-        padding-block: 0 18px;
+    .abt-container .a-header {
+        font-size: 72px;
     }
 
-    & a {
-        text-decoration: none;
-        color: white;
+    /* History Tablet Layout */
+
+    .h-container {
+        padding-inline: 1rem;
     }
 
-    & p:hover {
-        opacity: 1;
-    }
- 
- }
+    /* VMG Tablet Layout */
 
- .footer-5 {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid rgba(255, 255, 255, 0.6);
-    padding-block: 30px 10px;
-
-    & .f-copyright {
-        opacity: .8;
-    }
- }
-
- .l-footer {
-
-    & p {
-    padding-right: 40px;
-    font-size: 14px;
-    opacity: .8;
+    .vmg-container {
+        padding-inline: 1rem;
+        padding-block: 5rem;
     }
 
-    & a {
-        text-decoration: none;
-        color: white;
+    /* Campus, Graduation Info Tablet Layout */
+
+    .a-item {
+        padding-block: 3rem;
     }
 
-    & p:hover {
-        opacity: 1;
+    .a-item img {
+        display: none;
     }
- }
+
+    .a-campus-wrapper {
+        padding-left: 1rem;
+    }
+
+    .a-graduation-wrapper {
+        padding-inline: 1rem;
+    }
+
+    .a-training-wrapper {
+        padding-left: 1rem;
+    }
+}
+
+/* Mobile Layout */
+
+@media screen and (max-width: 767px) {
+    /* Hero Mobile Layout */
+    .abt-container {
+        padding-inline: 1rem;
+    }
+
+    /* abt. History Mobile Layout */
+    .h-container {
+        padding-inline: 1rem;
+    }
+
+    /* VMG Mobile Layout */
+    .vmg-container {
+        padding-inline: 1rem;
+        padding-block: 5rem; 
+        background-position: center;
+        min-height: 100%; 
+    }
+
+    .vmg-grid {
+        gap: 3rem;
+    }
+
+    /* Campus, Graduation Info Mobile Layout */
+
+    .a-item {
+        padding-block: 3rem;
+    }
+
+    .a-item img {
+        display: none;
+    }
+
+    .a-campus-wrapper {
+        padding-left: 1rem;
+    }
+
+    .a-graduation-wrapper {
+        padding-inline: 1rem;
+    }
+
+    .a-training-wrapper {
+        padding-left: 1rem;
+    }
+
+    /* Partnership Mobile Layout */
+
+    .p-grid img {
+        width: 100px;
+    }
+}
+
+/* Mobile Layout 500px Breakpoint */
+@media screen and (max-width: 500px) {
+    /* Hero Mobile Layout */
+      .abt-container {
+        padding-inline: 1rem;
+        padding-block: 0 5rem;
+    }
+
+    .abt-container .a-header {
+        font-size:56px;
+    }
+
+}
