--- a/style/contact.css
+++ b/style/contact.css
@@ -38,139 +38,9 @@ html, body {
 
 }
 
-.nav-colored {
-    background-color: var(--clr-primary);
-    filter: drop-shadow(6px 1px 10px rgba(0, 0, 0, 0.6));
-}
-
-.nav-transparent {
-    background-color:transparent;
-}
-
-#nav-bar-top {
-    padding: 1rem 18rem 1rem 18rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.side-nav-left {
-    font-size: 15px;
-
-    & a {
-        color: white;
-        text-decoration: none;
-        padding-right: 3rem;
-        position: relative;
-    }
-
-    & a:after {
-        content: '';
-        background: white;
-        width: 0;
-        height: 2px;
-        display: block;
-        position: absolute;
-        left: 0;
-        transition: 300ms;
-
-    }
-
-    & a:hover::after {
-        width: 50%;
-    }
-}
-
-.side-nav-right {
-    font-size: 16px;
-
-    & span {
-        margin-right: 16px;
-    }
-
-    & a {
-        color: white;
-        text-decoration: none;
-        padding-left: 3rem;
-    }
-}
-
-/* Navigation bottom */
-#nav-bar-btm {
-    background: transparent;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding-inline: 18rem;
-    padding-block: 1rem 0;
-    width: 100vw;
-    z-index: 9999 !important;
-    position: relative;
-
-    & h1 {
-        color: white;
-        font-size: 32px;
-
-        & span {
-            font-size: 15px;
-            font-style: italic;
-            padding-left: 4rem;
-            position: relative;
-            bottom: 1.5rem;
-        }
-    }
-
-    & ul {
-        list-style: none;
-    }
-
-    & li {
-        padding-inline: 20px;
-        display: inline-block;
-        
-    }
-
-    & a {
-        text-decoration: none;
-        color: white;
-        transition: 250ms;
-
-        &:hover::after {
-            width: 100%;
-        }
-    }
-
-    & a::after {
-        content: '';
-        background: white;
-        position: relative;
-        display: block;
-        width: 0;
-        height: 2px;
-        transition: 250ms;
-    }
-}
-
-#nav-bar-btm::before {
-    content: '';
-    height: .5px;
-    background: white;
-    position: absolute;
-    display: block;
-    inset: 0 18rem 0 18rem;
-    opacity: .5 
-}
-
-#nav-bar-btm .main-logo {
-    cursor: pointer;
-}
-
 /* Contact Section */
 .contact-section-container {
-    padding: 18rem 18rem 0 18rem    ;
+    padding: 18rem 18rem 0 18rem;
     max-width: 100vw;
     min-height: 80vh;
     text-align: center;
@@ -184,10 +54,13 @@ html, body {
 
 .contact-grid {
     max-width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 4fr));
 }
 
 .contact-item {
     text-align: center;
+    max-width: 100vw;
 
     & i {
         font-size: 32px;
@@ -255,98 +128,122 @@ form .c-btn:hover {
     text-align: center;
 }
 
-/* Footer Section */
-.footer-container {
-    max-width: 100vw;
-    min-height: 539px;
-    background: var(--clr-primary);
-    padding-inline: 18rem;
-    padding-block: 60px 0;
-    color: white;
- }
+/* Desktop/Laptop Layout */
+@media screen and (min-width: 1024px) and (max-width: 1650px) {
 
- .footer-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 4fr));
-    gap: 2rem;
- }
-
- .footer-1 div .f-header {
-    font-size: 18px;
-    opacity: 1 !important;
- }
-
- .footer-1 div .p-footer {
-    opacity: .8;
- }
-
- .footer-1 { 
-
-    & h1 {
-    padding-block: 0 20px;
-    font-size: 24px;
+    /* Contact Desktop Layout */
+    .contact-section-container {
+        padding-inline: 8rem;
+        padding-block: 15rem 0;    
     }
 
-    & p {
-    padding-block: 0 48px;
- }
- }
+    .contact-item p {
+        font-size: 13px;
+    }
 
- .footer-item {
+    /* Map Dekstop Layout */
+    .map-holder {
+        padding-inline: 8rem;
+    }
 
-    & h1 {
-    font-size: 24px;
-    padding-block: 0 20px;
+    /* Contact Form Desktop Layout */
+    .c-form-container {
+        padding-inline: 8rem;
+        padding-top: 3rem;
+    }
+
+    .c-logo-right {
+        padding: 5rem 1rem;
+    }
+
+}
+
+
+
+
+/* Tablet Layout */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+    /* Contact Tablet Layout */
+    .contact-section-container {
+        padding-inline: 1rem;
+        padding-block: 15rem 0;    
+    }
     
+    .contact-item {
+        padding-bottom: 3rem;
     }
 
-    & p {
-        opacity: .8;
-        padding-block: 0 18px;
+    .contact-item p {
+        font-size: 12px;
     }
 
-    & a {
-        text-decoration: none;
-        color: white;
+    .contact-item i {
+        font-size: 20px;
     }
 
-    & p:hover {
-        opacity: 1;
-    }
- 
- }
-
- .footer-5 {
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid rgba(255, 255, 255, 0.6);
-    padding-block: 30px 10px;
-
-    & .f-copyright {
-        opacity: .8;
-    }
- }
-
- .l-footer {
-
-    & p {
-    padding-right: 40px;
-    font-size: 14px;
-    opacity: .8;
+    .contact-item .c-headline {
+        font-size: 20px;
     }
 
-    & a {
-        text-decoration: none;
-        color: white;
+    /* Map Tablet Layout */
+    .map-holder {
+        padding-inline: 1rem;
     }
 
-    & p:hover {
-        opacity: 1;
+    /* Contact Form Tablet Layout */
+    .c-form-container {
+        padding-inline: 1rem;
+        padding-top: 3rem;
     }
- }
+
+    .c-logo-right {
+        padding: 5rem 1rem;
+    }
+}
 
 
 
 
+/* Mobile Layout */
+@media screen and (max-width: 767px) {
+
+    /* Contact Mobile Layout */
+    .contact-section-container {
+        padding-inline: 1rem;
+        padding-block: 10rem 0;    
+    }
+
+    .contact-item {
+        padding-bottom: 3rem;
+    }
+
+    .contact-item .c-headline {
+        font-size: 16px;
+    }
+
+    .contact-item p {
+        font-size: 12px;
+    }
+
+    .contact-item i {
+        font-size: 20px;
+    }
+
+    /* Map Mobile Layout */
+    .map-holder {
+        padding-inline: 1rem;
+    }
+
+    /* Contact Form Mobile Layout */
+    .c-form-container {
+        padding-inline: 1rem;
+        padding-top: 3rem;
+    }
+
+    .c-logo-right {
+        padding: 5rem 1rem;
+    }
+}
 
 
