--- a/style/eventsA.css
+++ b/style/eventsA.css
@@ -27,6 +27,16 @@ html, body {
     font-family: var(--font-universal);
 }
 
+/* Navigation Section */
+#nav-container {
+    position: fixed;
+    transition: 300ms;
+    z-index: 999999 !important;
+    max-width: 100vw;
+    background: var(--clr-primary);
+    filter: drop-shadow(0px 0 5px rgba(0, 0, 0, 0.6));
+}
+
  /* Events Hero Section */
  .event-container {
     background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9), transparent, rgba(0, 0, 0, 0.9)), url("../imgs/events-bg.png");
@@ -53,9 +63,10 @@ html, body {
 }
 
 .event-grid-item {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 3fr));
     align-items: center;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
 
     & a {
         color: white;
@@ -131,6 +142,142 @@ html, body {
 
 .event-calendar a:hover {
     background: var(--clr-2card);
+}
+
+.event-day {
+    display: none;
+}
+
+.event-img-holder {
+    position: relative;
+}
+
+.event-img-holder p {
+    position: absolute;
+    bottom: -1rem;
+    left: 0;
+    font-size: 12px;
+    color: white;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+}
+
+
+
+
+
+/* Desktop/Laptop Layout */
+@media screen and (min-width: 1024px) and (max-width: 1650px) {
+
+     /* Events Hero Desktop Layout */
+     .event-container {
+        padding: 0 8rem 4rem;
+    }
+
+    /* The Events Container Desktop Layout */
+    .eventpage-container {
+        padding-inline: 8rem;
+    }
+
+    .event-grid-item {
+        margin-bottom: 7rem;
+    }   
+}
+
+/* Tablet Layout */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+    /* Events Hero Tablet Layout */
+    .event-container {
+        padding: 0 1rem 4rem;
+    }
+
+    /* The Events Container Tablet Layout */
+    .eventpage-container {
+        padding-inline: 1rem;
+    }
+
+    .event-grid-item {
+        margin-bottom: 2rem;
+    }
+
+}
+
+/* Mobile Layout */
+@media screen and (max-width: 767px) {
+
+    /* Events Hero Mobile Layout*/
+    .event-container {
+        padding: 0 1rem 4rem;
+    }
+
+    .event-container .event-header {
+        font-size: 56px;
+    }
+
+    .event-container h2 {
+        font-size: 24px;
+    }
+
+    /* The events Mobile Layout */
+
+    .eventpage-container {
+        padding-inline: 1rem;
+    }
+
+    .event-head-info p {
+        font-size: 15px;
+    }
+
+    .event-head-info a {
+        font-size: 15px;
+    }
+
+    .event-head-info h1 {
+        font-size: 24px;
+    }
+
+    .event-head-info {
+        margin: 0 0 3rem 0 !important;
+    }
+
+    .event-img-holder {
+        position: relative;
+    }
+
+    .event-img-holder p {
+        position: absolute;
+        bottom: -1rem;
+        left: 0;
+        font-size: 12px;
+        color: white;
+        background: rgba(0, 0, 0, 0.6);
+        padding: 20px;
+    }
+
+    .event-day {
+        display: none;
+    }
+
+    .event-grid-item {
+        margin-bottom: 2rem;
+    }
+
+    .event-head h1 {
+        font-size: 20px;
+    }
+
+    .event-head a {
+        font-size: 12px;
+    }
+
+    .next-prev-container a {
+        font-size: 14px;
+    }
+
+    .event-calendar a {
+        font-size: 14px;
+    }
 }
 
 
